css: ensure vertical alignment of lists and hanging bullets
Nesting is not handled anymore. Is that a problem?

--- a/content/media/css/luffy.article.less
+++ b/content/media/css/luffy.article.less
@@ -298,15 +298,9 @@ main {
     }
 
     ul, ol, dl {
-        margin-left: @list-left-margin;
-    }
-    #lf-text {
-        & > ul, & > ol, & > dl {
-            margin-left: 2*@list-left-margin;
-            @media @small {
-                margin-left: @list-left-margin;
-            }
-        }
+        margin-left: 0;
+        padding-left: 0;
+        list-style-position: outside;
     }
     ul {
         list-style-type: square;
